Revision history for Perl extension Carp::Assert::More.

1.16    Fri Aug  4 14:18:51 CDT 2017
        [ENHANCEMENTS]
        Added the following functions:
        * assert_numeric( $n )
        * assert_all_keys_in( \%hash, \@keylist )
        * assert_empty( [\%hash|\@list] )
        * assert_coderef( $ref )
        * assert_isa_in( $ref, \@class_list )
        Thanks to Eric A. Zarko for some of them.  The rest were migrated
        from a private code project.

        Renamed assert_listref() to assert_arrayref(), but keep
        assert_listref() as backward compatibility.  assert_listref()
        may go away in the future.

        [DOCUMENTATION]
        Fixed a goof in the assert_integer() docs.  Thanks, Randy Lauen.

1.14    Wed Oct 31 11:37:04 CDT 2012
        [ENHANCEMENTS]
        Added assert_undefined() for Ben Hengst.

        Added assert_unlike().

        [FIXES]
        assert_nonblank() wasn't using the correct message.  Thanks to
        Leland Johnson.

        assert_nonempty() wouldn't work on blessed arrays and refs.
        Now it will.

1.12    Oct 14 2005
        [ENHANCEMENTS]
        * Added assert_nonnegative() and assert_nonnegative_integer().
        * Added assert_lacks().  Thanks to Bob Diss.

1.10    Wed Feb 16 12:52:16 CST 2005
        [FIXES]
        * Fixed assert_positive_integer() to not pass "14.".

1.08    Wed Nov 24 11:44:34 CST 2004
        [ENHANCEMENTS]
        * Added assert_is() and assert_isnt()
        * Organized the functions into logical groupings.

        [INTERNALS]
        * Now requires Test::Exception.
        * Added t/pod.t and t/pod-coverage.t


1.06    Sat Oct 30 23:50:45 CDT 2004
        * No functionality changes.  Just added a Copyright notice to
          so we can put it in Debian.

1.04    Mon Oct 18 10:21:37 CDT 2004
        [ENHANCEMENTS]
        * assert_isa() is now aware of subclasses.

        [FIXES]
        * $names weren't getting passed to sub-assertions.  Now they are.
