@@ -6,6 +6,7 @@ More.pm
 README.md
 t/00-load.t
 t/assert_all_keys_in.t
+t/assert_aoh.t
 t/assert_arrayref.t
 t/assert_coderef.t
 t/assert_defined.t
