@@ -1,5 +1,9 @@
 Revision history for Perl extension Carp::Assert::More.
 
+NEXT
+        [ENHANCEMENTS]
+        Added assert_aoh() for asserting an array of hashrefs.
+
 1.16    Fri Aug  4 14:18:51 CDT 2017
         [ENHANCEMENTS]
         Added the following functions:
